# filght-ticket-system

./: README.md
AAAProject 3 FlightTicketSystem v0.5/: README.md
AAAProject 3 FlightTicketSystem v0.5/client/FlightTicketClient/: AdminTypes.h  CMakeLists.txt  DataTypes.h  DatabaseManager.cpp  DatabaseManager.h  FlightTicketClient_zh_CN.ts  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.qss
AAAProject 3 FlightTicketSystem v0.5/docs/: TEST_PLAN.md  clean_build.ps1  database_api.md  docs_project_plan.md  enhancement_plan.md  大作业开发报告基本格式.md
AAAProject 3 FlightTicketSystem v0.5/server/FlightTicketServer/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  main.cpp
